--- a/PIAndroidAgent/res/values/strings_activity_login.xml
+++ b/PIAndroidAgent/res/values/strings_activity_login.xml
@@ -3,6 +3,8 @@
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
     <string name="action_sign_in_register"><b>Sign in</b> or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_forgot_password">Recover lost password</string>
@@ -11,7 +13,5 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
-    <string name="prompt_host">Host address</string>
-    <string name="prompt_apikey">API-key</string>
 
 </resources>
