--- a/PIAndroidAgent/res/layout/activity_activity_twopane.xml
+++ b/PIAndroidAgent/res/layout/activity_activity_twopane.xml
@@ -23,7 +23,7 @@
 
     <fragment
         android:id="@+id/activity_list"
-        android:name="com.kupepia.piandroidagent.ActivityListFragment"
+        android:name="com.kupepia.piandroidagent.ui.ActivityListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
